# SoftDesk

./: README.md  constants.py  db.sqlite3  pyproject.toml  setup.cfg
flake-report/: index.html  softdesk.projects.admin.report.html  softdesk.projects.admin.source.html  softdesk.users.admin.report.html  softdesk.users.admin.source.html
softdesk/: settings.py  urls.py
softdesk/projects/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
softdesk/projects/migrations/: 0001_initial.py  0002_initial.py  0003_alter_issue_assigned_to.py
softdesk/users/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
softdesk/users/migrations/: 0001_initial.py  0002_alter_user_age.py
