[tool.poetry]
name = "softdesk"
version = "0.1.0"
description = ""
authors = ["Miuqnar <79018444+Miuqnar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.1"
django = "^5.0.6"
djangorestframework-simplejwt = "^5.3.1"
flake8-html = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
